# eda-cli-tool

./: .gitignore  README.md  core.py  pyproject.toml
data-examples/: house-price.parquet  iris.json  mock-data.xlsx  weather.tsv
data_readers/: __init__.py  base_reader.py  csv_reader.py  google_sheets_reader.py  parquet_reader.py
llm/: llm_analysis.py
src/eda/: __init__.py  cli.py  core.py
src/eda/analysis/: statistical_analysis.py
src/eda/data_readers/: __init__.py  csv_reader.py  json_reader.py  xlsx_reader.py
src/eda/llm/: llm_analysis.py
src/eda/prompts/: categorical.yaml  default.yaml  numeric.yaml  timeseries.yaml
src/eda/visualizations/: plotly_visualizations.py
tests/: test_core.py
